Update Makefile and menu button for PG2

--- a/Makefile.pg2
+++ b/Makefile.pg2
@@ -239,6 +239,7 @@ CC_OPTS	= $(F_OPTS) $(W_OPTS) $(OPTIMIZE)
 
 CFLAGS += $(CC_OPTS)
 CFLAGS += -DDINGUX \
+	  -DPG2 \
 	  -DLSB_FIRST \
 	  -DPSS_STYLE=1 \
 	  -DHAVE_ASPRINTF \
